--- a/src/Encabezado.css
+++ b/src/Encabezado.css
@@ -1,11 +1,42 @@
-header {
+  header {
     background-color: #1135ad;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    height: 100px;
   }
   
+  img {
+    height: 130px;
+  }
+
+  form {
+    display: flex;
+    align-items: center;
+  }
+  
+  input[type="text"] {
+    padding: 0.5rem;
+    border: none;
+    border-radius: 0.25rem;
+    margin-right: 0.5rem;
+    font-size: 1rem;
+    height: 20px;
+    width: 500px;
+  }
+  
+  button[type="submit"] {
+    padding: 0.5rem 1rem;
+    background-color: #fff;
+    color: #1135ad;
+    border: none;
+    border-radius: 5px;
+    font-size: 1;
+    height: 40px;
+    width: 50px;
+  }
+
   nav {
     display: flex;
     justify-content: center;
@@ -20,15 +51,21 @@ header {
   }
   
   nav li {
-    margin: 10px;
+    margin: 0 10px;
     border: 1px solid black;
     padding: 5px;
-    background-color: #fff; 
+    background-color: #fff;
     color: #1135ad;
-    border-radius: 5px; 
+    border-radius: 5px;
     font-family: 'Oswald Bold', sans-serif;
+    font-size: 20px;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
+  
   body {
     margin: 0;
   }
