--- a/src/Encabezado.css
+++ b/src/Encabezado.css
@@ -1,12 +1,16 @@
-  header {
-    background-color: #1135ad;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    height: 100px;
-  }
-  
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #1135ad;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  height: 100px;
+  width: 100%;
+  z-index: 2;
+}
   img {
     height: 130px;
   }
