--- a/src/DetalleProducto.css
+++ b/src/DetalleProducto.css
@@ -2,29 +2,29 @@
 
 /* DetalleProducto.css */
 
-.product-image {
+.product-image1 {
     height: 400px;
     margin-top: 100px;
   }
   
-  .product-info {
+  .product-info1 {
     margin-top: 20px;
   }
   
-  .product-name {
+  .product-name1 {
     font-size: 50px;
     font-family: 'Oswald Bold', sans-serif;
   }
   
-  .product-description {
+  .product-description1 {
     margin-top: 30px;
     font-family: 'Oswald Bold', sans-serif;
   }
 
-  .back-button {
+  .back-button1 {
     font-family: 'Oswald Bold', sans-serif;
     font-weight: bold;
-    font-size: 18px; /* Ajusta según sea necesario */
-    margin-top: 20px; /* Espacio entre la descripción y el botón */
+    font-size: 18px;
+    margin-top: 20px;
   }
   
